--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icons8-circled-play-button-96.png" />
+    <link rel="icon" type="image/svg+xml" href="icons8-circled-play-button-96.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StreamX - Discover Movies & TV Shows</title>
     <meta key="title" content="Vite + HeroUI" property="og:title" />
@@ -19,10 +19,10 @@
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
       name="viewport"
     />
-    <link href="/icons8-circled-play-button-96.png" rel="icon" />
+    <link href="icons8-circled-play-button-96.png" rel="icon" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
